--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,11 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-#mac
-.DS_Store
-
-#Eclipse project files
-.classpath
-.project
-
-/build/
-.gradle/*
-/bin/
-eclipse/.metadata/
-.settings/
+build/
+.gradle/
+*.iml
+*.ipr
+*.iws
+.idea/
+out/
+run/
+src/main/resources/assets/teckle/textures/blocks/clrref/
+src/main/java/mcmultipart/
+src/main/resources/assets/mcmultiparttest/
